[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Fonts/manaspace/manaspace32.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Levels/GameOver.gd" type="Script" id=2]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.00784314, 0.180392, 1 )

[node name="TryAgain" type="Button" parent="."]
margin_left = 536.0
margin_top = 184.0
margin_right = 1200.0
margin_bottom = 384.0
custom_fonts/font = ExtResource( 1 )
text = "TRY AGAIN"

[node name="MainMenu" type="Button" parent="."]
margin_left = 536.0
margin_top = 400.0
margin_right = 1200.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 1 )
text = "MAIN MENU"

[node name="PlayerStats" type="Label" parent="."]
margin_left = 40.0
margin_top = 224.0
margin_right = 80.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 1 )

[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
